1-lesson/web-service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: web
spec:
  type: NodePort
  selector:
    app: web
  ports:
   - protocol: TCP
     port: 80
     targetPort: 8080
